Modificando a funcionalidade(teste)

--- a/src/main/resources/com/example/sisapsoo/add-func-dialog.fxml
+++ b/src/main/resources/com/example/sisapsoo/add-func-dialog.fxml
@@ -9,19 +9,19 @@
                 <Label text="Adicionar Novo Funcionário" style="-fx-font-size: 16px;"/>
                 <HBox spacing="10">
                     <Label text="Nome:"/>
-                    <TextField fx:id="nomeField" promptText="Nome"/>
+                    <TextField fx:id="campoNome" promptText="Nome"/>
                 </HBox>
                 <HBox spacing="10">
                     <Label text="CPF:"/>
-                    <TextField fx:id="cpfField" promptText="CPF"/>
+                    <TextField fx:id="campoCpf" promptText="CPF"/>
                 </HBox>
                 <HBox spacing="10">
                     <Label text="Salário:"/>
-                    <TextField fx:id="salarioField" promptText="Salário"/>
+                    <TextField fx:id="campoSalario" promptText="Salário"/>
                 </HBox>
                 <HBox spacing="10">
                     <Label text="Telefone:"/>
-                    <TextField fx:id="telefoneField" promptText="Telefone"/>
+                    <TextField fx:id="campoTelefone" promptText="Telefone"/>
                 </HBox>
             </children>
         </VBox>
