--- a/src/main/resources/com/example/sisapsoo/gerenciamento-funcionarios-view.fxml
+++ b/src/main/resources/com/example/sisapsoo/gerenciamento-funcionarios-view.fxml
@@ -28,7 +28,7 @@
          <top>
             <Pane fx:id="painelDeCima" prefHeight="64.0" prefWidth="980.0" BorderPane.alignment="CENTER">
                <children>
-                  <Button fx:id="addButton" layoutX="20.0" layoutY="13.0" mnemonicParsing="false" onAction="#addFunc" prefHeight="40.0" prefWidth="100.0" text="Adicionar" />
+                  <Button fx:id="addButton" layoutX="20.0" layoutY="13.0" mnemonicParsing="false" onAction="#adicionar" prefHeight="40.0" prefWidth="100.0" text="Adicionar" />
                   <Label fx:id="labelTitulo" contentDisplay="CENTER" layoutX="384.0" layoutY="7.0" text="Funcionários" textAlignment="CENTER">
                      <font>
                         <Font size="35.0" />
@@ -40,7 +40,7 @@
                         <Blend mode="DARKEN" />
                      </effect>
                   </Label>
-                  <Button fx:id="removeButton" layoutX="838.0" layoutY="12.0" mnemonicParsing="false" onAction="#removerFunc" prefHeight="40.0" prefWidth="128.0" text="Remover por ID" />
+                  <Button fx:id="removeButton" layoutX="838.0" layoutY="12.0" mnemonicParsing="false" onAction="#remover" prefHeight="40.0" prefWidth="128.0" text="Remover por ID" />
                </children>
             </Pane>
          </top>
